# chat_grid

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  progress.md
client/: index.html  (+2 more)
desktop/native/: .gitignore  README.md  desktop_entry.py  progress.md  pyproject.toml  release-metadata.json
desktop/native/docs/: NEXT-BUILD-AUTH-AUDIO-PLAN.md  NEXT-VERSION-FEDERATION-PLAN.md
desktop/native/macos/: ChatGrid-macOS.spec  README.md  UNSIGNED_BUILD_STATUS.md  UNSIGNED_BUILD_STATUS_0.3.1.md  UNSIGNED_BUILD_STATUS_0.3.2.md  macos_entry.py  setup_macos.py
desktop/native/macos/EndiginousSetup/: Package.swift  README.md
desktop/native/macos/scripts/: build-macos.sh
desktop/native/src/chat_grid_native/: __init__.py  __main__.py  app.py  browser_auth.py  config.py  deeplink.py  screen_reader.py  spatial_audio.py  startup.py  updater.py  windows_keyboard.py
desktop/native/tests/: test_accessibility_shortcuts.py  test_auto_connect.py  test_browser_auth.py  test_config.py  test_deeplink.py  test_dialog_lifecycle.py  test_entrypoint.py  test_native_login.py  test_native_menu_layout.py  test_native_world_keyboard.py  test_reconnect.py  test_screen_reader.py  test_spatial_audio.py  test_updater.py
desktop/native/updates/: latest-macos.json  latest-windows-0.3.0.json  latest-windows.json
desktop/native/windows/: README.md
desktop/native/windows/installer/: ChatGrid.iss
desktop/native/windows/scripts/: build-windows.ps1  publish-source-wsl.sh
desktop/qt6/: CMakeLists.txt  README.md
desktop/qt6/src/: main.cpp
desktop/qt6/src/app/: main_window.cpp  main_window.h
desktop/qt6/src/transport/: protocol_client.cpp  protocol_client.h
desktop/qt6/src/world/: world_viewport.cpp  world_viewport.h
desktop/qt6/tests/: source_contract.py
desktop/wxpython/: Endiginous.spec  README.md  pyproject.toml  release-metadata.json
desktop/wxpython/installer/: ChatGrid.iss
desktop/wxpython/scripts/: build-windows.ps1
desktop/wxpython/src/chat_grid_native/: __init__.py  __main__.py  app.py  config.py  reconnect.py  single_instance.py  startup.py  updater.py
desktop/wxpython/tests/: test_accessibility_shortcuts.py  test_single_instance.py  test_updater.py
desktop/wxpython/updates/: latest-windows.json
server/: config.example.toml  pyproject.toml
server/app/: auth_service.py  blind_productions_billboards.py  chat_history.py  client.py  config.py  curated_billboards.py  item_catalog.py  item_service.py  item_types.py  models.py  network_security.py  notification_service.py  ntfy_publisher.py  seed_items.py  server.py  ui_metadata.py  version.py  voice_service.py  world.py  world_cup_live.py
server/app/items/: registry.py  sound_policy.py
server/app/items/types/: place_common.py  plugin_helpers.py
server/app/items/types/billboard/: __init__.py  actions.py  definition.py  plugin.py  validator.py
server/app/items/types/cabin/: __init__.py  actions.py  definition.py  plugin.py  validator.py
server/app/items/types/clock/: actions.py  definition.py  plugin.py  time_format.py  validator.py
server/app/items/types/dice/: actions.py  definition.py  plugin.py
server/app/items/types/ecrypto_bank/: __init__.py  actions.py  definition.py  plugin.py  validator.py
server/app/items/types/ecrypto_wallet/: __init__.py  actions.py  definition.py  plugin.py  validator.py
server/app/items/types/furniture/: __init__.py  actions.py  definition.py  plugin.py  validator.py
server/app/items/types/house/: __init__.py  actions.py  definition.py  plugin.py  validator.py
server/app/items/types/house_alarm/: __init__.py  actions.py  definition.py  plugin.py  validator.py
server/app/items/types/house_keeper/: __init__.py  actions.py  definition.py  plugin.py  validator.py
server/app/items/types/house_object/: __init__.py  actions.py  definition.py  plugin.py  validator.py
server/app/items/types/piano/: actions.py  definition.py  plugin.py  validator.py
server/app/items/types/qr_code/: __init__.py  actions.py  definition.py  plugin.py  validator.py
server/app/items/types/radio_station/: aaastreamer.py  actions.py  definition.py  validator.py
server/app/items/types/room/: __init__.py  actions.py  definition.py  plugin.py  validator.py
server/tests/: conftest.py  test_aaastreamer_radio.py  test_auth_service.py  test_billboard_item.py  test_blind_productions_billboards.py  test_companion_client.py  test_house_item.py  test_house_object_readables.py  test_http_session_cookie.py  test_item_persistence.py  test_item_schema_ui.py  test_item_use_cooldown.py  test_models.py  test_network_security.py  test_nickname_uniqueness.py  test_nickname_updates.py  test_radio_station_validator.py  test_server_message_handling.py  test_service_link_item.py  test_world_cup_live.py
server/tools/: companion_client.py
(+158 files in other folders)
