[project]
name = "chat-grid-server"
version = "0.1.0"
description = "Chat Grid signaling server"
requires-python = ">=3.11"
dependencies = [
  "argon2-cffi>=23.1.0",
  "pydantic>=2.10.4",
  "websockets>=15.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
lint = [
    "ruff>=0.15.11",
]
security = [
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
]
test = [
    "coverage[toml]>=7.13.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
type = [
    "mypy>=1.20.1",
    "pytest>=9.0.2",
]
