[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-grid-desktop"
version = "0.3.2"
description = "Official accessible wxPython desktop client for Chat Grid"
requires-python = ">=3.11"
dependencies = [
  "wxPython>=4.2.2,<4.3",
  "requests>=2.32,<3",
  "packaging>=24,<27",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.12,<7", "py2app>=0.28.8,<0.29; sys_platform == 'darwin'"]
test = ["pytest>=8,<10"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
